--- a/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
+++ b/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
