Fixed drop-down menu 04:24.

--- a/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
+++ b/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
@@ -16,7 +16,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E12CCD872CF8235F0059931D"
-               BuildableName = "BTC Simulator.app"
+               BuildableName = "Bitcoin HODL Simulator.app"
                BlueprintName = "BTC Simulator"
                ReferencedContainer = "container:BTCMonteCarlo.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E12CCD872CF8235F0059931D"
-            BuildableName = "BTC Simulator.app"
+            BuildableName = "Bitcoin HODL Simulator.app"
             BlueprintName = "BTC Simulator"
             ReferencedContainer = "container:BTCMonteCarlo.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E12CCD872CF8235F0059931D"
-            BuildableName = "BTC Simulator.app"
+            BuildableName = "Bitcoin HODL Simulator.app"
             BlueprintName = "BTC Simulator"
             ReferencedContainer = "container:BTCMonteCarlo.xcodeproj">
          </BuildableReference>
