Workig on in-app purchase 11:09.

--- a/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
+++ b/BTCMonteCarlo.xcodeproj/xcshareddata/xcschemes/BTC Simulator.xcscheme
@@ -52,6 +52,9 @@
             ReferencedContainer = "container:BTCMonteCarlo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../BTC Simulator/TestStoreKit.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Debug"
